--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dash==0.19.0
 dash-core-components==0.15.5
 dash-html-components==0.8.0
 dash-renderer==0.11.1
+DateTime==4.2
 decorator==4.1.2
 entrypoints==0.2.3
 Flask==0.12.2
@@ -35,6 +36,7 @@ nbformat==4.4.0
 notebook==5.2.2
 numpy==1.14.0
 pandas==0.22.0
+pandas-datareader==0.5.0
 pandocfilters==1.4.2
 parso==0.1.1
 pexpect==4.3.1
@@ -49,6 +51,8 @@ pytz==2017.3
 pyzmq==16.0.3
 qtconsole==4.3.1
 requests==2.18.4
+requests-file==1.4.3
+requests-ftp==0.3.1
 scipy==1.0.0
 seaborn==0.8.1
 simplegeneric==0.8.1
@@ -62,3 +66,4 @@ wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
 widgetsnbextension==3.1.0
+zope.interface==4.4.3
