--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ entrypoints==0.2.3
 Flask==0.12.2
 Flask-Caching==1.3.3
 Flask-Compress==1.4.0
+gunicorn==19.7.1
 html5lib==1.0.1
 idna==2.6
 ipykernel==4.7.0
