--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ chardet==3.0.4
 click==6.7
 cycler==0.10.0
 dash==0.19.0
-dash-core-components==0.15.5
+dash-core-components==0.17.0
 dash-html-components==0.8.0
-dash-renderer==0.11.1
+dash-renderer==0.11.2
 DateTime==4.2
 decorator==4.1.2
 entrypoints==0.2.3
@@ -35,6 +35,7 @@ mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.2.2
+numba==0.36.2
 numpy==1.14.0
 pandas==0.22.0
 pandas-datareader==0.5.0
