--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ decorator==4.1.2
 entrypoints==0.2.3
 Flask==0.12.2
 Flask-Compress==1.4.0
+gevent==1.2.2
+greenlet==0.4.12
 gunicorn==19.7.1
 html5lib==1.0.1
 idna==2.6
